Chapter 5 : Case Study: Unemployment Rate

--- a/Python/Visualizing Time Series Data in Python/takeaways.ipynb
+++ b/Python/Visualizing Time Series Data in Python/takeaways.ipynb
@@ -40,6 +40,10 @@
    "metadata": {},
    "source": [
     "```\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('filename.csv', parse_dates=[\"date_col\"], index_col=\"date_col\")\n",
+    "df = df[\"1960-01-01\":\"1969-12-31\"] # Subsetting for smaller portion\n",
+    "\n",
     "sub_df = df['1960':'1970'] # Slicing using time index\n",
     "ax = sub_df.plot(color='blue', figsize=(12, 5), fontsize=12, linewidth=3, linestyle='--')\n",
     "ax.set_xlabel('X label')\n",
@@ -68,19 +72,23 @@
     "from statsmodels.graphics import tsaplots\n",
     "fig = tsaplots.plot_pacf(co2_levels['co2'], lags=40)\n",
     "\n",
-    "# Time series decomposition\n",
-    "import statsmodels.api as sm\n",
-    "import matplotlib.pyplot as plt\n",
-    "from pylab import rcParams\n",
-    "rcParams['figure.figsize'] = 11, 9\n",
-    "decomposition = sm.tsa.seasonal_decompose(df['col'])\n",
-    "fig = decomposition.plot()\n",
-    "plt.show()\n",
-    "print(dir(decomposition)) # See what can be used\n",
-    "decomp_seasonal = decomposition.seasonal # Seasonal component\n",
-    "decomp_trend = decomposition.trend # Trend component\n",
-    "decomp_resid = decomp.resid # Residual component\n",
+    "# Multiple time series on same plot\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(df.index, df['col1'], color='red')\n",
+    "ax.tick_params('y', colors='red')\n",
+    "ax.set_xlabel('Time Axis')\n",
+    "ax.set_ylabel('First Y Axis')\n",
     "\n",
+    "ax2 = ax.twinx() # Same x axis, but separate y axis\n",
+    "ax2.plot(df.index, df['col2'], color='blue')\n",
+    "ax2.tick_params('y', colors='blue')\n",
+    "ax2.set_ylabel('Second Y Axis')\n",
+    "\n",
+    "ax2.annotate(\"Annotation text\", xy=(pd.Timestamp('2015-10-06'), 1),\n",
+    "        xytext=(pd.Timestamp('2008-10-06'), -0.2),\n",
+    "        arrowprops={\"arrowstyle\":\"->\", \"color\":\"gray\"})\n",
+    "\n",
+    "plt.show()\n",
     "\n",
     "```"
    ]
@@ -211,6 +219,78 @@
     "reduced_df = chest_df.drop(to_drop, axis=1)\n",
     "# Different concept : Hierarchical heatmap (similar columns are put closely together)\n",
     "sns.clustermap(corr_df)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time series decomposition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Time series decomposition\n",
+    "import statsmodels.api as sm\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pylab import rcParams\n",
+    "rcParams['figure.figsize'] = 11, 9\n",
+    "decomposition = sm.tsa.seasonal_decompose(df['col'])\n",
+    "fig = decomposition.plot()\n",
+    "plt.show()\n",
+    "print(dir(decomposition)) # See what can be used\n",
+    "decomp_seasonal = decomposition.seasonal # Seasonal component\n",
+    "decomp_trend = decomposition.trend # Trend component\n",
+    "decomp_resid = decomp.resid # Residual component\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subplot python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "fig, axs = plt.subplots(2, 2)\n",
+    "axs[0, 0].plot(x, y)\n",
+    "axs[0, 0].set_title(\"main\")\n",
+    "axs[1, 0].plot(x, y**2)\n",
+    "axs[1, 0].set_title(\"shares x with main\")\n",
+    "axs[1, 0].sharex(axs[0, 0])\n",
+    "axs[0, 1].plot(x + 1, y + 1)\n",
+    "axs[0, 1].set_title(\"unrelated\")\n",
+    "axs[1, 1].plot(x + 2, y + 2)\n",
+    "axs[1, 1].set_title(\"also unrelated\")\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "# Alternative way\n",
+    "# Create a facetted graph with 2 rows and 2 columns\n",
+    "ax = df.plot(subplots=True,\n",
+    "                      layout=(2,2),\n",
+    "                      sharex=False,\n",
+    "                      sharey=False,\n",
+    "                      linewidth=0.7,\n",
+    "                      fontsize=3,\n",
+    "                      legend=False)\n",
+    "\n",
+    "plt.show()\n",
     "```"
    ]
   }
