Chapter 2 : Manipulating data

--- a/Python/Introduction to PySpark/takeaways.ipynb
+++ b/Python/Introduction to PySpark/takeaways.ipynb
@@ -65,6 +65,8 @@
     "df.printSchema()\n",
     "# Perform basic operations or transformations on the DataFrame as needed\n",
     "# For example, you can filter rows, perform aggregations, etc.\n",
+    "# Load a spark table in the DataFrame\n",
+    "df_new = spark.table(\"table_name\")\n",
     "# Stop SparkSession\n",
     "spark.stop()\n",
     "```"
@@ -101,7 +103,54 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pyspark operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Add a new result column\n",
+    "df = df.withColumn(\"new_col\",df.old_col+10)\n",
+    "# Selecting column\n",
+    "calculated_col = (df.col1/(df.col2/60)).alias(\"another_col\")\n",
+    "df = df.select(\"col1\", \"col2\", \"col3\", calculated_col)\n",
+    "df = df.select(df.col1, df.col2, df.col3)\n",
+    "df = df.selectExpr(\"col1\", \"col2\", \"col3\", \"col1/(col2/60) as another_col\")\n",
+    "\n",
+    "# Filtering (Both produces same results)\n",
+    "df.filter(\"col_name > 120\").show()\n",
+    "df.filter(df.col_name > 120).show()\n",
+    "# Chaining filters\n",
+    "filterA = df.col1 == \"SEA\"\n",
+    "filterB = df.col2 == \"PDX\"\n",
+    "result = temp.filter(filterA).filter(filterB)\n",
+    "\n",
+    "# Group by\n",
+    "df.groupBy(\"col_name\").count().show()\n",
+    "# Aggregation\n",
+    "df.filter(df.col == 'value').groupBy().max(\"another_col\").show()\n",
+    "\n",
+    "# Drop nulls\n",
+    "df = df.na.drop(subset=[\"col_name\"])\n",
+    "# Rename column\n",
+    "df = df.withColumnRenamed(\"old_col_name\", \"new_col_name\")\n",
+    "\n",
+    "# Casting / Converting column type\n",
+    "from pyspark.sql.functions import col\n",
+    "df = df.withColumn(\"col_name\", col(\"col_name\").cast(\"float\"))\n",
+    "\n",
+    "```"
+   ]
   },
   {
    "cell_type": "code",
