Chapter 3 : Getting started with machine learning pipelines

--- a/Python/Introduction to PySpark/takeaways.ipynb
+++ b/Python/Introduction to PySpark/takeaways.ipynb
@@ -148,15 +148,52 @@
     "# Casting / Converting column type\n",
     "from pyspark.sql.functions import col\n",
     "df = df.withColumn(\"col_name\", col(\"col_name\").cast(\"float\"))\n",
+    "df = df.withColumn(\"col_name\", df.col_name.cast(\"float\"))\n",
     "\n",
     "```"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Machine Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "\n",
+    "# One-hot encoding\n",
+    "from pyspark.ml.feature import StringIndexer, OneHotEncoder\n",
+    "string_indexer = StringIndexer(inputCol=\"col\",outputCol=\"string_index\") # categorical vector\n",
+    "one_hot_encoder = OneHotEncoder(inputCol=\"string_index\",outputCol=\"onehot_feature\") # One-hot encoding\n",
+    "# Make a VectorAssembler\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "vec_assembler = VectorAssembler(inputCols=[\"col1\", \"air_time\", \"onehot_feature1\", \"onehot_feature2\", \"plane_age\"], outputCol=\"features\")\n",
+    "\n",
+    "# Pipeline\n",
+    "from pyspark.ml import Pipeline\n",
+    "pipeline = Pipeline(stages=[string_indexer1, one_hot_encoder1, string_indexer2, one_hot_encoder2, vec_assembler])\n",
+    "pipeline_model = pipeline.fit(df) # Fit the dataframe\n",
+    "transformed_df = pipeline_model.transform(df) # Transform the dataframe\n",
+    "# Split the data into training and test sets\n",
+    "training, test = transformed_df.randomSplit([.6, .4])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
