Chapter 4 : Model tuning and selection

--- a/Python/Introduction to PySpark/takeaways.ipynb
+++ b/Python/Introduction to PySpark/takeaways.ipynb
@@ -33,6 +33,7 @@
     "        - They send their results back to the master.\n",
     "- Spark's core data structure is the Resilient Distributed Dataset (RDD)\n",
     "- Instead of RDDs, it is easier to work with Spark DataFrame abstraction built on top of RDDs ( Operations using DataFrames are automatically optimized.)\n",
+    "- spark dataframes are immutable, you need to return a new instance after modification \n",
     "- You start working with `SparkSession` or `SparkContext`"
    ]
   },
@@ -164,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Machine Learning"
+    "### pyspark Machine Learning"
    ]
   },
   {
@@ -172,7 +173,6 @@
    "metadata": {},
    "source": [
     "```\n",
-    "\n",
     "# One-hot encoding\n",
     "from pyspark.ml.feature import StringIndexer, OneHotEncoder\n",
     "string_indexer = StringIndexer(inputCol=\"col\",outputCol=\"string_index\") # categorical vector\n",
@@ -188,13 +188,35 @@
     "transformed_df = pipeline_model.transform(df) # Transform the dataframe\n",
     "# Split the data into training and test sets\n",
     "training, test = transformed_df.randomSplit([.6, .4])\n",
+    "\n",
+    "# LogisticRegression\n",
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "lr = LogisticRegression()\n",
+    "\n",
+    "# Evaluation metric\n",
+    "import pyspark.ml.evaluation as evals\n",
+    "evaluator = evals.BinaryClassificationEvaluator(metricName=\"areaUnderROC\")\n",
+    "\n",
+    "# Create the parameter grid and Fine tuning\n",
+    "import pyspark.ml.tuning as tune\n",
+    "grid = tune.ParamGridBuilder()\n",
+    "grid = grid.addGrid(lr.regParam, np.arange(0, .1, .01))\n",
+    "grid = grid.addGrid(lr.elasticNetParam, [0, 1])\n",
+    "grid = grid.build()\n",
+    "\n",
+    "# Create the CrossValidator\n",
+    "cv = tune.CrossValidator(estimator=lr,\n",
+    "               estimatorParamMaps=grid,\n",
+    "               evaluator=evaluator)\n",
+    "models = cv.fit(training) # Fit the training set\n",
+    "best_lr = models.bestModel # Find the best model\n",
+    "# best_lr = lr.fit(training)\n",
+    "print(best_lr)\n",
+    "test_results = best_lr.transform(test) # Use the model to predict the test set\n",
+    "# Evaluate the predictions\n",
+    "print(evaluator.evaluate(test_results))\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
