Chapter 2 : Programming in PySpark RDD’s

--- a/Python/Big Data Fundamentals with PySpark/takeaways.ipynb
+++ b/Python/Big Data Fundamentals with PySpark/takeaways.ipynb
@@ -138,7 +138,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Spark Context"
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pyspark session"
    ]
   },
   {
@@ -146,12 +153,59 @@
    "metadata": {},
    "source": [
     "```\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# Create a SparkSession\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"Load and Query CSV with SQL\") \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "# Load the CSV file into a DataFrame\n",
+    "df = spark.read.csv(\"file.csv\", header=True, inferSchema=True)\n",
+    "\n",
+    "# Register the DataFrame as a temporary table or view\n",
+    "df.createOrReplaceTempView(\"my_table\")\n",
+    "\n",
+    "# Run SQL queries on the DataFrame\n",
+    "query_result = spark.sql(\"SELECT * FROM my_table WHERE column_name = 'value'\")\n",
+    "\n",
+    "# Show the query result\n",
+    "query_result.show()\n",
+    "\n",
+    "# Print the tables in the catalog\n",
+    "print(spark.catalog.listTables())\n",
+    "\n",
+    "# Access the SparkContext from SparkSession\n",
+    "sc = spark.sparkContext\n",
+    "spark = SparkSession(sc) # Create a SparkSession from SparkContext\n",
+    "\n",
+    "# Stop SparkSession\n",
+    "spark.stop()\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pyspark context"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Create a context from SparkSession\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"example\") \\\n",
+    "    .getOrCreate()\n",
+    "sc = spark.sparkContext\n",
+    "\n",
+    "# Alternative : create spark context explicitly\n",
     "from pyspark import SparkConf, SparkContext\n",
-    "\n",
-    "# Create a SparkConf object to configure the SparkContext\n",
-    "conf = SparkConf().setAppName(\"YourAppName\").setMaster(\"local[*]\")\n",
-    "\n",
-    "# Create a SparkContext with the configured SparkConf object\n",
+    "conf = SparkConf().setAppName(\"YourAppName\").setMaster(\"local[*]\") # Set configuration for SparkContext\n",
     "sc = SparkContext(conf=conf)\n",
     "\n",
     "\n",
@@ -160,9 +214,96 @@
     "print(sc.pythonVer) # Print Python version\n",
     "print(sc.master) # Print the spark mode\n",
     "\n",
-    "# Loading data\n",
-    "rdd = sc.parallelize([1,2,3,4,5])\n",
-    "rdd2 = sc.textFile(\"test.txt\")\n",
+    "# Loading data (With specified number of partitions)\n",
+    "numRDD = sc.parallelize(range(10), minPartitions = 6)\n",
+    "fileRDD = sc.textFile(\"README.md\", minPartitions = 6)\n",
+    "fileRDD.getNumPartitions() # See number of broken parts\n",
+    "\n",
+    "# Create a SparkSession from SparkContext\n",
+    "spark = SparkSession(sc) \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pyspark dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# Create a SparkSession\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"example\") \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "df = spark.read.csv(\"file.csv\", header=True, inferSchema=True) # load file\n",
+    "df.printSchema() # Show the DataFrame schema\n",
+    "df.show(5) # Show the first few rows of the DataFrame\n",
+    "df.createOrReplaceTempView(\"table_name\") # Register DataFrame as a temporary view\n",
+    "result = spark.sql(\"SELECT * FROM table_name\") # Run query on table\n",
+    "result.show() # Show result\n",
+    "\n",
+    "df_pandas = df.toPandas() # Convert from spark dataframe to pandas dataframe\n",
+    "df_spark = spark.createDataFrame(df_pandas) # Convert from pandas dataframe to spark dataframe\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RDD operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "RDD = sc.textFile(\"README.md\", minPartitions = 5)\n",
+    "RDD.getNumPartitions() # See number of partitions\n",
+    "RDD = sc.parallelize([1,2,3,4])\n",
+    "RDD_map = RDD.map(lambda x: x * x) # using map with an RDD\n",
+    "RDD_filter = RDD.filter(lambda x: x > 2) # using filter with an RDD\n",
+    "RDD_reduce = RDD.reduce(lambda x, y : x + y) # 10\n",
+    "\n",
+    "RDD.flatMap(lambda x: x.split(\" \")) # flatMap returns multiple values for each element in the original RDD\n",
+    "combinedRDD = RDD1.union(RDD2) # Combining 2 RDDs\n",
+    "RDD.collect() # Return all elements of dataset as an array\n",
+    "RDD.take(2)  # Return first n elements of dataset\n",
+    "RDD.first() # Return first element of dataset\n",
+    "RDD.count() # Return no of elements in the RDD\n",
+    "\n",
+    "RDD.saveAsTextFile(\"tempFile\") # Save text file as multiple partition files\n",
+    "RDD.coalesce(1).saveAsTextFile(\"tempFile\")  # Save text file as a single file\n",
+    "\n",
+    "# Working with paired data\n",
+    "my_tuple = [(\"Messi\", 23), (\"Ronaldo\", 34), (\"Neymar\", 22), (\"Messi\", 24)]\n",
+    "pairRDD = sc.parallelize(my_tuple)\n",
+    "pairRDD.reduceByKey(lambda x,y : x + y).collect() # [('Neymar', 22), ('Ronaldo', 34), ('Messi', 47)]\n",
+    "pairRDD = pairRDD.map(lambda x: (x[1], x[0])) # keys and values swap places\n",
+    "pairRDD.sortByKey(ascending=False).collect()#  [(47, 'Messi'), (34, 'Ronaldo'), (22, 'Neymar')]\n",
+    "RDD1.join(RDD2).collect() # Joining two RDDs\n",
+    "# Groupby operation\n",
+    "grouped_RDD = pairRDD.groupByKey().collect() \n",
+    "for key, val in grouped_RDD:\n",
+    "    print(key, list(val))\n",
+    "\n",
+    "# Countby operation\n",
+    "rdd = sc.parallelize([(\"a\", 1), (\"b\", 1), (\"a\", 1)])\n",
+    "countby_rdd = rdd.countByKey()\n",
+    "for key, val in countby_rdd.items():\n",
+    "    print(key, val) # ('a', 2) , ('b', 1)\n",
+    "\n",
+    "# Turning into dictionary\n",
+    "pairRDD.collectAsMap()\n",
     "```"
    ]
   }
