--- a/Python/Big Data Fundamentals with PySpark/takeaways.ipynb
+++ b/Python/Big Data Fundamentals with PySpark/takeaways.ipynb
@@ -304,6 +304,81 @@
     "\n",
     "# Turning into dictionary\n",
     "pairRDD.collectAsMap()\n",
+    "\n",
+    "# Turning into dataframe\n",
+    "RDD = sc.parallelize([(\"X10\", 2017, 5.65, 2.79, 6.13),\n",
+    "                    (\"8Plus\", 2017, 6.23, 3.07, 7.12)])\n",
+    "names = ['Model', 'Year', 'Height', 'Width', 'Weight']\n",
+    "spark_df = spark.createDataFrame(iphones_RDD, schema=names) # spark is sparksession object\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Spark Dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Create dataframe from RDD\n",
+    "spark_df = spark.createDataFrame(RDD, schema=colname_list)\n",
+    "# Loading file\n",
+    "df = spark.read.csv(\"file.csv\", header=True, inferSchema=True) # .json, .txt\n",
+    "df.show(3)\n",
+    "df.printSchema() # See schema information\n",
+    "df.describe().show() # Summary stats\n",
+    "# Add a new result column\n",
+    "df = df.withColumn(\"new_col\",df.old_col+10)\n",
+    "# Selecting column\n",
+    "df = df.select(df.col1, df.col2, df.col3)\n",
+    "calculated_col = (df.col1/(df.col2/60)).alias(\"another_col\")\n",
+    "df = df.select(\"col1\", \"col2\", \"col3\", calculated_col)\n",
+    "df = df.selectExpr(\"col1\", \"col2\", \"col3\", \"col1/(col2/60) as another_col\")\n",
+    "# Filtering (Both produces same results)\n",
+    "df.filter(\"col_name > 120\").show()\n",
+    "df.filter(df.col_name > 120).show()\n",
+    "# Chaining filters\n",
+    "filterA = df.col1 == \"SEA\"\n",
+    "filterB = df.col2 == \"PDX\"\n",
+    "result = temp.filter(filterA).filter(filterB)\n",
+    "\n",
+    "\n",
+    "df.groupBy(\"col_name\").count().show() # Group by and count\n",
+    "df.orderBy(\"col_name\").show(3) # order by and count\n",
+    "# Aggregation\n",
+    "df.filter(df.col == 'value').groupBy().max(\"another_col\").show()\n",
+    "df = df.na.drop(subset=[\"col_name\"]) # Drop nulls\n",
+    "df = df.dropDuplicates() # Drop duplicates\n",
+    "# Rename column\n",
+    "df = df.withColumnRenamed(\"old_col_name\", \"new_col_name\")\n",
+    "\n",
+    "# Casting / Converting column type\n",
+    "from pyspark.sql.functions import col\n",
+    "df = df.withColumn(\"col_name\", col(\"col_name\").cast(\"float\"))\n",
+    "df = df.withColumn(\"col_name\", df.col_name.cast(\"float\"))\n",
+    "\n",
+    "# SQL with dataframe\n",
+    "df.createOrReplaceTempView(\"table_name\")\n",
+    "df2 = spark.sql(\"SELECT * FROM table_name\")\n",
+    "result = df2.collect() # Dataframe as list of rows tha you can iterate over\n",
+    "\n",
+    "## Visualization : Pyspark_dist_explore, pandas (NOT RECOMMENDED), HandySpark(RECOMMENDED)\n",
+    "pandas_df = spark_df.toPandas()\n",
+    "handy_df = spark_df.toHandy() # Convert to handyspark dataframe\n",
+    "handy_df.cols[\"col_name\"].hist()\n",
+    "spark_df = handy_df.to_spark() # Convert to pyspark dataframe\n",
     "```"
    ]
   }
