Chapter 3 : Exploring categorical data and unstructured text

--- a/SQL/Exploratory Data Analysis in SQL/takeaways.ipynb
+++ b/SQL/Exploratory Data Analysis in SQL/takeaways.ipynb
@@ -97,6 +97,74 @@
     "DROP TABLE IF EXISTS temp_table;\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- lowercase : `SELECT lower('ABC');` (abc)\n",
+    "- uppercase : `SELECT lower('abc');` (ABC)\n",
+    "- pattern matching case sensitive : `SELECT * FROM table_name  WHERE col_name LIKE '%apple%';`\n",
+    "- pattern matching case insensitive : `SELECT * FROM table_name  WHERE col_name ILIKE '%apple%';`\n",
+    "- trimming : `SELECT trim('Wow!', '!wW');` (o). Also `rtrim`, `ltrim`\n",
+    "- substring : `SELECT substr('abcdef', 2, 3);` (bcd)\n",
+    "- splitting: `SELECT split_part('a,bc,d', ',', 2);` (bc)\n",
+    "- Concatenating : `SELECT concat('a', 2, 'cc');` (a2cc) ALSO `concat_ws()`\n",
+    "- Concatenating : `SSELECT 'a' || 2 || 'cc';` (a2cc) (NOTE: Any NULL will produce NULL result )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CASE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "SELECT \n",
+    "    CASE \n",
+    "        WHEN category LIKE '%: %' THEN split_part(category, ': ', 1)\n",
+    "        WHEN category LIKE '% - %' THEN split_part(category, ' - ', 1)\n",
+    "        ELSE split_part(category, ' | ', 1)\n",
+    "        END AS major_category, -- alias the result\n",
+    "sum(businesses) -- also select number of businesses\n",
+    "FROM naics\n",
+    "GROUP BY major_category;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Update column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "UPDATE table_name\n",
+    "SET col_name=trim(lower(col_name));\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
