Chapter 4 : Machine Learning with PySpark MLlib

--- a/Python/Big Data Fundamentals with PySpark/takeaways.ipynb
+++ b/Python/Big Data Fundamentals with PySpark/takeaways.ipynb
@@ -18,18 +18,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Volume: Size of the data\n",
-    "- Variety: Different sources and formats\n",
-    "- Velocity: Speed of the data\n",
-    "- Clustered computing: Collection of resources of multiple machines\n",
-    "- Parallel computing: Simultaneous computation on single computer\n",
-    "- Distributed computing: Collection of nodes (networked computers) that run in parallel\n",
-    "- Batch processing: Breaking the job into small pieces and running them on individual machines\n",
-    "- Real-time processing: Immediate processing of data\n",
-    "- Big Data processing systems\n",
-    "    - Hadoop/MapReduce: Scalable and fault tolerant framework written in Java (Batch processing)\n",
-    "    - Apache Spark: General purpose and lightning fast cluster computing system (Both batch and real-time data processing)\n",
-    "    - Note: Apache Spark is nowadays preferred over Hadoop/MapReduce"
+    "- Defined by 5 Vs:\n",
+    "    - velocity =  Data generated at extremely fast speed.\n",
+    "    - volume = Amount is huge\n",
+    "    - variety = Data comes from many different sources\n",
+    "    - veracity = Consistency, Completeness, Integrity, Ambiguity of data (Structured, unstructured, semi-structured)\n",
+    "    - value = Derive insight from data\n",
+    "\n",
+    "- Related concepts:\n",
+    "    - Clustered computing: Collection of resources of multiple machines\n",
+    "    - Parallel computing: Simultaneous computation on single computer\n",
+    "    - Distributed computing: Collection of nodes (networked computers) that run in parallel\n",
+    "    - Batch processing: Breaking the job into small pieces and running them on individual machines\n",
+    "    - Real-time processing: Immediate processing of data\n",
+    "    - Big Data processing systems\n",
+    "        - Hadoop/MapReduce: Scalable and fault tolerant framework written in Java (for Distributed storage and Batch processing)\n",
+    "        - Apache Spark: General purpose and lightning fast cluster computing system for Distributed real-time analytics (Both batch and real-time data processing)\n",
+    "        - Apache Hive (Warehouse for query and analysis)\n",
+    "        - Note: Apache Spark is nowadays preferred over Hadoop/MapReduce"
    ]
   },
   {
@@ -131,6 +137,25 @@
     "\n",
     "items = [1, 2, 3, 4]\n",
     "list(filter(lambda x: (x%2 != 0), items)) ## [1, 3]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reduce"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from functools import reduce\n",
+    "\n",
+    "some_list = [1, 2, 3, 4, 5]\n",
+    "total_sum = reduce(lambda x, y: x + y, some_list) # 15\n",
     "```"
    ]
   },
@@ -249,6 +274,7 @@
     "df.createOrReplaceTempView(\"table_name\") # Register DataFrame as a temporary view\n",
     "result = spark.sql(\"SELECT * FROM table_name\") # Run query on table\n",
     "result.show() # Show result\n",
+    "spark_df = spark.table(\"table_name\") # start using a spark table as spark dataframe\n",
     "\n",
     "df_pandas = df.toPandas() # Convert from spark dataframe to pandas dataframe\n",
     "df_spark = spark.createDataFrame(df_pandas) # Convert from pandas dataframe to spark dataframe\n",
@@ -310,6 +336,8 @@
     "                    (\"8Plus\", 2017, 6.23, 3.07, 7.12)])\n",
     "names = ['Model', 'Year', 'Height', 'Width', 'Weight']\n",
     "spark_df = spark.createDataFrame(iphones_RDD, schema=names) # spark is sparksession object\n",
+    "df_pandas = spark_df.toPandas() # Convert from spark dataframe to pandas dataframe\n",
+    "handy_df = spark_df.toHandy() # Convert to handyspark dataframe\n",
     "```"
    ]
   },
@@ -339,6 +367,9 @@
     "df.show(3)\n",
     "df.printSchema() # See schema information\n",
     "df.describe().show() # Summary stats\n",
+    "df.createOrReplaceTempView(\"table_name\") # Register DataFrame as a temporary view\n",
+    "result = spark.sql(\"SELECT * FROM table_name\") # Run query on table\n",
+    "spark_df = spark.table(\"table_name\") # start using a spark table as spark dataframe\n",
     "# Add a new result column\n",
     "df = df.withColumn(\"new_col\",df.old_col+10)\n",
     "# Selecting column\n",
@@ -353,7 +384,6 @@
     "filterA = df.col1 == \"SEA\"\n",
     "filterB = df.col2 == \"PDX\"\n",
     "result = temp.filter(filterA).filter(filterB)\n",
-    "\n",
     "\n",
     "df.groupBy(\"col_name\").count().show() # Group by and count\n",
     "df.orderBy(\"col_name\").show(3) # order by and count\n",
@@ -379,6 +409,274 @@
     "handy_df = spark_df.toHandy() # Convert to handyspark dataframe\n",
     "handy_df.cols[\"col_name\"].hist()\n",
     "spark_df = handy_df.to_spark() # Convert to pyspark dataframe\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Machine Learning with dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# One-hot encoding\n",
+    "from pyspark.ml.feature import StringIndexer, OneHotEncoder\n",
+    "# StringIndexer does indexing for each category. this step allows handling unseen category in testing set\n",
+    "string_indexer1 = StringIndexer(inputCol=\"cat_col\",outputCol=\"string_index\") \n",
+    "one_hot_encoder1 = OneHotEncoder(inputCol=\"string_index\",outputCol=\"onehot_feature\") # One-hot encoding using the category indices\n",
+    "# Combine all features\n",
+    "from pyspark.ml.feature import VectorAssembler\n",
+    "vec_assembler = VectorAssembler(inputCols=[\"feature1\", \"feature2\", \"feature3\", \"onehot_feature1\", \"onehot_feature2\"], outputCol=\"features\")\n",
+    "\n",
+    "# Define the model\n",
+    "model_rf = RandomForestClassifier(featuresCol=\"features\", labelCol=\"label\", numTrees=10) # from pyspark.ml.classification import RandomForestClassifier\n",
+    "model_lr1 = LogisticRegression(featuresCol=\"features\", labelCol=\"label\") # from pyspark.ml.classification import LogisticRegression\n",
+    "model_lr2 = LinearRegression(featuresCol=\"features\", labelCol=\"label\") # from pyspark.ml.regression import LinearRegression\n",
+    "model_kmeans = KMeans(featuresCol=\"features\", predictionCol=\"kmeans_prediction\", k=3) # from pyspark.ml.clustering import KMeans\n",
+    "# deep learninng\n",
+    "layers = [len(feature_cols) + 2, 5, 2]  # Input layer size, hidden layer sizes, output layer size\n",
+    "model_dl = MultilayerPerceptronClassifier(layers=layers, labelCol=\"label\", featuresCol=\"features\", seed=123)\n",
+    "# Pipeline\n",
+    "from pyspark.ml import Pipeline\n",
+    "pipeline = Pipeline(stages=[string_indexer1, one_hot_encoder1, string_indexer2, one_hot_encoder2, vec_assembler, model_xx])\n",
+    "\n",
+    "# Create the parameter grid\n",
+    "import pyspark.ml.tuning as tune\n",
+    "paramGrid = tune.ParamGridBuilder()\\\n",
+    "        .addGrid(lr.regParam, np.arange(0, .1, .01))\n",
+    "        .addGrid(lr.elasticNetParam, [0, 1])\n",
+    "        .build()\n",
+    "\n",
+    "# Evaluation metric\n",
+    "import pyspark.ml.evaluation as evals\n",
+    "evaluator_logistic = evals.BinaryClassificationEvaluator(labelCol=\"label\", rawPredictionCol=\"rawPrediction\")\n",
+    "evaluator_reg = evals.RegressionEvaluator(labelCol=\"label\", predictionCol=\"prediction\", metricName=\"rmse\")\n",
+    "evaluator_rf_dl = evals.MulticlassClassificationEvaluator(labelCol=\"label\", predictionCol=\"prediction\", metricName=\"accuracy\") \n",
+    "# Create cross-validator\n",
+    "cv = CrossValidator(estimator=pipeline,\n",
+    "                          estimatorParamMaps=paramGrid,\n",
+    "                          evaluator=evaluator,\n",
+    "                          numFolds=3) \n",
+    "\n",
+    "# Split the data into training and test sets\n",
+    "training, test = transformed_df.randomSplit([.6, .4])\n",
+    "\n",
+    "cvModel = cv.fit(training) # Fit the dataframe\n",
+    "bestModel = cvModel.bestModel # Best model\n",
+    "bestParams = bestModel.stages[-1].extractParamMap() # See best parameters\n",
+    "test_results = bestModel.transform(test) # Use the model to predict the test set\n",
+    "predictions = cvModel.transform(test) # Predict using testing set\n",
+    "accuracy = evaluator.evaluate(predictions)\n",
+    "feature_importances = bestModel.stages[-1].featureImportances\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Machine Learning with RDD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "data = [\n",
+    "    ('A', 0.7, 'm', 1.0),\n",
+    "    ('B', 0.1, 'f', 0.3),\n",
+    "    ('A', 0.8, 'm', 0.2),\n",
+    "    ('C', 0.2, 'f', 0.5),\n",
+    "    ('C', 0.5, 'f', 0.6)\n",
+    "]\n",
+    "rdd = sc.parallelize(data)\n",
+    "\n",
+    "# Convert label to numerical values\n",
+    "label_mapping = {'A': 0, 'B': 1, 'C': 2}\n",
+    "rdd = rdd.map(lambda x: (label_mapping[x[0]], x[1:]))\n",
+    "# Convert data to LabeledPoint (helps to identify the labels as rdd.label and features as rdd.features)\n",
+    "labeled_rdd = rdd.map(lambda x: LabeledPoint(x[0], Vectors.dense(x[1])))\n",
+    "\n",
+    "# One-hot encoding ( using Pipeline and pyspark dataframe construct)\n",
+    "pipeline = Pipeline(stages=[\n",
+    "    StringIndexer(inputCol='_2', outputCol='gender_index'),\n",
+    "    OneHotEncoder(inputCol='gender_index', outputCol='gender_encoded')\n",
+    "])\n",
+    "df = spark.createDataFrame(labeled_rdd, [\"label\", \"features\"])\n",
+    "pipeline_model = pipeline.fit(df)\n",
+    "df = pipeline_model.transform(df)\n",
+    "# Convert DataFrame back to RDD\n",
+    "rdd = df.rdd.map(lambda row: (row.label, row.features, row.gender_encoded))\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "(trainingData, testData) = rdd.randomSplit([0.8, 0.2])\n",
+    "\n",
+    "# Train the model \n",
+    "model_lr = LogisticRegressionWithLBFGS.train(trainingData)\n",
+    "model_lin = LinearRegressionWithSGD.train(trainingData, iterations=100, step=0.1)\n",
+    "model_rf = RandomForest.trainClassifier(trainingData, numClasses=3, categoricalFeaturesInfo={},\n",
+    "                                     numTrees=10, featureSubsetStrategy=\"auto\",\n",
+    "                                     impurity='gini', maxDepth=4, maxBins=32)\n",
+    "kmeans_model = KMeans.train(trainingData.map(lambda x: x[1]), k=3, maxIterations=10, initializationMode=\"random\")\n",
+    "\n",
+    "# Train the model with deep learning \n",
+    "input_size = len(trainingData.first()[1])\n",
+    "output_size = 3  # number of classes\n",
+    "hidden_layers = [input_size, 5, output_size]  # input layer size, hidden layer sizes, output layer size\n",
+    "model_mlp = MultilayerPerceptronClassifier.train(trainingData, iterations=100, stepSize=0.1, layers=hidden_layers)\n",
+    "\n",
+    "# Make predictions on the test data\n",
+    "predictions = testData.map(lambda x: (model_.predict(x[1]), x[0]))\n",
+    "predictions_kmeans = kmeans_model.predict(testData.map(lambda x: x[1]))\n",
+    "\n",
+    "# Evaluate MLP, Random Forest model\n",
+    "metrics = MulticlassMetrics(predictions)\n",
+    "accuracy = metrics_mlp.accuracy\n",
+    "\n",
+    "# Evaluate Logistic Regression model\n",
+    "metrics_lr = BinaryClassificationMetrics(predictions_lr)\n",
+    "auc_roc_lr = metrics_lr.areaUnderROC\n",
+    "\n",
+    "# Evaluate Linear Regression model\n",
+    "metrics_lin = RegressionMetrics(predictions_lin)\n",
+    "rmse_lin = metrics_lin.rootMeanSquaredError\n",
+    "\n",
+    "# Compute R-squared for KMeans model\n",
+    "def calculate_rmse(predictions):\n",
+    "    return np.sqrt(predictions.map(lambda x: (x[0] - x[1]) ** 2).mean())\n",
+    "\n",
+    "# Calculate RMSE for KMeans model\n",
+    "rmse_kmeans = calculate_rmse(testData.map(lambda x: (predictions_kmeans.predict(x[1]), x[0])))\n",
+    "\n",
+    "sc.stop()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Colaborative Filtering pyspark dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml.recommendation import ALS\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "\n",
+    "# Initialize SparkSession\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"ALS Example\") \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "# Sample data (User ID, Item ID, Rating, Additional Column1, Additional Column2)\n",
+    "data = [\n",
+    "    (1, 1, 5, \"A\", \"X\"),\n",
+    "    (1, 2, 4, \"B\", \"Y\"),\n",
+    "    (2, 1, 3, \"C\", \"Z\"),\n",
+    "    (2, 2, 5, \"D\", \"W\"),\n",
+    "    (3, 1, 4, \"E\", \"V\"),\n",
+    "    (3, 2, 2, \"F\", \"U\")\n",
+    "]\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = spark.createDataFrame(data, [\"user\", \"item\", \"rating\", \"additional_col1\", \"additional_col2\"])\n",
+    "\n",
+    "# Split data into training and test sets\n",
+    "(training_data, test_data) = df.randomSplit([0.8, 0.2])\n",
+    "\n",
+    "# Train ALS model\n",
+    "als = ALS(rank=10, maxIter=10, regParam=0.01, userCol=\"user\", itemCol=\"item\", ratingCol=\"rating\")\n",
+    "model = als.fit(training_data)\n",
+    "\n",
+    "# Make predictions on test data\n",
+    "predictions = model.transform(test_data)\n",
+    "\n",
+    "# Evaluate predictions using RMSE\n",
+    "evaluator = RegressionEvaluator(metricName=\"rmse\", labelCol=\"rating\", predictionCol=\"prediction\")\n",
+    "rmse = evaluator.evaluate(predictions)\n",
+    "print(\"Root Mean Squared Error (RMSE) = \" + str(rmse))\n",
+    "\n",
+    "# Stop SparkSession\n",
+    "spark.stop()\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Collaborative Filtering RDD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from pyspark import SparkContext\n",
+    "from pyspark.mllib.recommendation import ALS, Rating\n",
+    "\n",
+    "# Initialize SparkContext\n",
+    "sc = SparkContext(\"local\", \"ALS Example\")\n",
+    "\n",
+    "# Sample data (User ID, Item ID, Rating, Additional Column1, Additional Column2)\n",
+    "data = [\n",
+    "    (1, 1, 5, \"A\", \"X\"),\n",
+    "    (1, 2, 4, \"B\", \"Y\"),\n",
+    "    (2, 1, 3, \"C\", \"Z\"),\n",
+    "    (2, 2, 5, \"D\", \"W\"), # <--- say this data is for testing\n",
+    "    (3, 1, 4, \"E\", \"V\"),\n",
+    "    (3, 2, 2, \"F\", \"U\")\n",
+    "]\n",
+    "\n",
+    "# Create RDD\n",
+    "ratings_rdd = sc.parallelize(data)\n",
+    "\n",
+    "# Map the data to Rating objects (User ID, Item ID, Rating)\n",
+    "ratings = ratings_rdd.map(lambda x: Rating(x[0], x[1], x[2])) # Rating(user=1, product=1, rating=5.0)\n",
+    "\n",
+    "# Split data into training and test sets\n",
+    "training_data, test_data = ratings.randomSplit([0.8, 0.2])\n",
+    "\n",
+    "# Train ALS model\n",
+    "rank = 10  # Number of latent factors\n",
+    "num_iterations = 10  # Number of iterations\n",
+    "model = ALS.train(training_data, rank, num_iterations)\n",
+    "\n",
+    "# Make predictions on test data\n",
+    "test_user_item_pairs = test_data.map(lambda x: (x[0], x[1]))\n",
+    "predictions = model.predictAll(test_user_item_pairs)\n",
+    "predictions = predictions.map(lambda r: ((r[0], r[1]), r[2])) # ((2, 2), 5.008601768134059)\n",
+    "\n",
+    "# Join predicted ratings with actual ratings\n",
+    "rates_and_preds = test_data.map(lambda r: ((r[0], r[1]), r[2])).join(predictions) # ((2, 2), (5.0, 5.008601768134059))\n",
+    "\n",
+    "# Calculate RMSE\n",
+    "RMSE = (rates_and_preds.map(lambda r: (r[1][0] - r[1][1])**2).mean())**0.5\n",
+    "print(\"Root Mean Squared Error (RMSE) = \" + str(RMSE))\n",
+    "\n",
+    "# Stop SparkContext\n",
+    "sc.stop()\n",
+    "\n",
     "```"
    ]
   }
